--- a/liiga/src/app/globals.css
+++ b/liiga/src/app/globals.css
@@ -16,7 +16,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #0f0f0f;
+    --foreground: #ededed;
+  }
+}
+@media (prefers-color-scheme: light) {
+  :root {
+    --background: #fffff8;
     --foreground: #ededed;
   }
 }
