--- a/liiga/src/app/globals.css
+++ b/liiga/src/app/globals.css
@@ -1,3 +1,4 @@
+@import 'tailwindcss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -31,4 +32,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+.content-table{
+  table-layout: auto;
 }
