--- a/liiga/src/app/globals.css
+++ b/liiga/src/app/globals.css
@@ -32,7 +32,6 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
-.content-table{
-  table-layout: auto;
+  overflow-x: hidden;
+  padding-bottom: 200px;
 }
