Created new component to display filtered search bar search

--- a/liiga/src/app/globals.css
+++ b/liiga/src/app/globals.css
@@ -28,6 +28,10 @@
   }
 }
 
+input[type="search"]::-webkit-search-cancel-button {
+  display: none;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
